# alpha-emu

./: .gitignore  CMakeLists.txt  LICENSE  compile_commands.json
src/: CMakeLists.txt  main.cc  main.cpp
src/core/: clock.cc  clock.cpp  clock.hpp  cpu.cc  file.cc  window.cc
src/include/: clock.hpp  cpu.hh  file.hh  log.hh  system.hh  triangle.hh  window.hh
src/ui/: dialogdebug.ui  mainwindow.ui
test/: CMakeLists.txt  main.cpp
